--- a/Chalkable.Web/assets/sass/partials/main/notification/_notifications_by_days.scss
+++ b/Chalkable.Web/assets/sass/partials/main/notification/_notifications_by_days.scss
@@ -70,6 +70,16 @@ BODY {
                   padding: 7px 85px 10px 10px;
                   cursor: pointer;
                   color: #9D9D9D;
+                  position: relative;
+
+                  .notification-item-action{
+                    display: block;
+                    width: 100%;
+                    height: 32px;
+                    position: absolute;
+                    top: 0px;
+                    left: -1px;
+                  }
 
                   &:last-child{
                     @include border-radius(0px 0 5px 5px);
