fixed add app dialog, admin market, student market

--- a/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
+++ b/Chalkable.Web/assets/jade/activities/apps/add-app-dialog.jade
@@ -2,4 +2,4 @@
     +ActionForm('apps', 'create')
         input(type="text", name="name")
         +Button()(type="submit").special-button2.blue.add Add
-        +Button.special-button.special-button2.blue.cancel.close Cancel
+        +Button.special-button2.blue.cancel.close Cancel
