--- a/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/AdminSidebar.jade
@@ -12,7 +12,7 @@
             +ActionLink('admins', 'people').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
-            +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
+            +ActionLink('appmarket', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardAdmin').one-third-button.settings(title="View Settings") Settings
         .buttons-row
             +ActionLink('attendance', 'summary').one-third-button.attendance(title="View Attendance") Attendance
