--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -11,6 +11,6 @@
             +ActionLink('students', 'all').one-third-button.people(title="View People") People
         .buttons-row
             +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
-            +ActionLink('app-market', 'list').one-third-button.apps(title="View Apps") Apps
+            +ActionLink('appmarket', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardStudent').one-third-button.settings(title="View Settings") Settings
 +ListForWeekCalendar()
