--- a/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
+++ b/Chalkable.Web/assets/jade/activities/student/SummaryView.jade
@@ -32,10 +32,10 @@ else
                     if(!user.getCurrentClassName() || user.getCurrentClassName().toLowerCase() != 'no class now')
                         |&nbsp;- #{user.getRoomName()}
                 .glance-container
-                    +GlanceBox(null, null, {value: null, title: Msg.Percentile})
+                    +GlanceBox(null, null, self.buildGradesGlanceBoxData())
                     +GlanceBox(null, null, self.buildAttendanceGlanceBoxData(), null, chlk.converters.attendance.AttendanceTypeToNameConverter.prototype.convert)
                     +GlanceBox(null, null, self.buildDisciplineGlanceBoxData(), null, null)
-                    +GlanceBox(null, null, {value: null, title: Msg.Recent})
+                    +GlanceBox(null, null, self.buildRankGlanceBoxData())
         .today-work-panel
             h2=Msg.Todays_work
             .period-toolbar
