--- a/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
+++ b/Chalkable.Web/assets/jade/activities/messages/ViewDialog.jade
@@ -11,8 +11,7 @@
                     =self.body
                 br
                 .form-buttons
-                    +ActionLink('message', 'sendPage', self.id)
-                        |Replay
+                    +ActionLink('message', 'sendPage', self.id)= self.isReplay() ? 'Replay' : 'Send'
                     +Button.special-button.red-button.close Cancel
 
     .bg-bottom
