--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -33,6 +33,7 @@
 
 @import "partials/main/developer/_app";
 @import "partials/main/developer/_app_general";
+@import "partials/main/developer/_api";
 
 @import "partials/main/apps/_market_pages";
 @import "partials/main/apps/_my_apps";
