fixed api explorer

--- a/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
+++ b/Chalkable.Web/assets/jade/activities/developer/api-explorer.jade
@@ -19,7 +19,31 @@ mixin ApiCallForm(controllerInfo)
                             .description=cntMethod.getDescription()
                     .details
                         .det-content
-
+                            methodParams = cntMethod.getParams() || []
+                            form
+                                if methodParams.length > 0
+                                    table
+                                        thead
+                                            th Parameter
+                                            th Value
+                                            th Description
+                                        tbody
+                                            each methodParam in methodParams
+                                                tr
+                                                    td.param-name=methodParam.getName()
+                                                    td.param-value
+                                                        input(type="text" data-form-id = "id", data-param-type = "type", name = methodParam.getName()).value-field(class = methodParam.isOptional() ? "optional" : undefined)
+                                                    td.param-description=methodParam.getDescription()
+                                else
+                                    .no-error No parameters required
+                            .code-examples
+                                .text-title Code Examples
+                                .tab-headers
+                                    .tab-header.active
+                                        span.triangle
+                                        cUrl
+                                    .tab-content
+                                        Some example
 
 apiInfo = self.getApiInfo()
 
