--- a/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
+++ b/Chalkable.Web/assets/jade/sidebars/StudentSidebar.jade
@@ -10,7 +10,7 @@
             +ActionLink('message', 'page').one-third-button.messages(title="View Messages") Messages
             +ActionLink('students', 'all').one-third-button.people(title="View People") People
         .buttons-row
-            +ActionLink('grading', '').one-third-button.statistic(title="View Grades") Grades
+            +ActionLink('grading', 'summaryAll').one-third-button.statistic(title="View Grades") Grades
             +ActionLink('appmarket', 'list').one-third-button.apps(title="View Apps") Apps
             +ActionLink('settings', 'dashboardStudent').one-third-button.settings(title="View Settings") Settings
 +ListForWeekCalendar()
