fixed developer signup email validation, added api calls

--- a/Chalkable.Web/Views/Developer/SignUp.cshtml
+++ b/Chalkable.Web/Views/Developer/SignUp.cshtml
@@ -95,7 +95,7 @@
                 <ul id="form" class="developers">
                     <li>
                         <label>Email </label>
-                        <div><input id="Email" name="Email" type="email" spellcheck="false" class="fieldtext validate[required]" value="" maxlength="31" tabindex="2" required/></div>
+                        <div><input id="Email" name="Email" type="email" spellcheck="false" class="fieldtext validate[required, custom[email]]" value="" maxlength="31" tabindex="2" required/></div>
                     </li>
                     <li>
                         <label class="desc" id="title126" for="Field126">Password </label>
