added teacher class discipline page

--- a/Chalkable.Web/assets/sass/partials/_main.scss
+++ b/Chalkable.Web/assets/sass/partials/_main.scss
@@ -52,6 +52,7 @@
 @import "partials/main/popups/_set_discipline";
 
 @import "partials/main/disciplines/_discipline_list";
+@import "partials/main/disciplines/_class_disciplines";
 
 @import "partials/main/messages/_list";
 @import "partials/main/messages/_add";
