--- a/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
+++ b/Chalkable.Web/assets/jade/activities/discipline/ClassDisciplinesView.jade
@@ -17,7 +17,7 @@ redirectData = self.getRedirectData()
                    data-action="classList",
                    data-params=selectedId ? [selectedId.valueOf()] : null
                )#discipline-date.tb-date-picker
-    .people-list-container.not-transparents
+    .people-list-container.not-transparent
         .top.panel-bg
         .action-bar.buttons.filter
             .container.panel-bg
