fixed for CHLK-2283 Student > Grades > {Class Selected}

--- a/Chalkable.Web/assets/jade/activities/class/ClassProfileGrading.jade
+++ b/Chalkable.Web/assets/jade/activities/class/ClassProfileGrading.jade
@@ -12,4 +12,6 @@ clazz = self.getGradingPart()
                 div
             .grading-section
                 gradingModel = new chlk.models.grading.GradingClassSummaryPart(self.getGradingPart().getGradingPerMp())
-                +RenderWith(gradingModel, chlk.templates.grading.GradingClassSummaryPartTpl)
+                +RenderWith(gradingModel, chlk.templates.grading.GradingClassSummaryPartTpl, {
+                    userRole: self.getUserRole()
+                })
