--- a/Chalkable.Web/assets/sass/partials/main/_grading.scss
+++ b/Chalkable.Web/assets/sass/partials/main/_grading.scss
@@ -5,12 +5,98 @@ BODY {
         #main-wrapper {
           #main{
             .student-grading-summary{
+
+              &.student-grading-class-summary{
+                h1{
+                  margin-top: 7px;
+                }
+
+                .grading-chart-part {
+                  margin: 15px 0 0 -14px;
+
+                  .chart-bg{
+                    background: url(images/grading/chart-bg.png) 28px center no-repeat;
+                    top: -16px;
+                    height: 155px;
+
+                    .chart-container-1{
+                      height: 155px;
+                    }
+                  }
+                }
+              }
+
               h1{
                 font: bold 18px Arial;
                 margin: 30px 27px;
                 color: #2f7790;
                 text-shadow: 0 1px 0 white;
                 border-bottom: 1px solid #c8c8c8;
+                position: relative;
+                padding-bottom: 2px;
+
+                .avatar-wrapper{
+                  margin-right: 9px;
+                  display: inline-block;
+                  @include border-radius(2px);
+                  overflow: hidden;
+
+                  >DIV{
+                    width: 39px;
+                    height: 39px;
+                  }
+                }
+
+                .mp-info{
+                  text-shadow: 1px 1px 0 white, -1px 0 0 #afafaf;
+                  color: #868686;
+                  position: absolute;
+                  right: 5px;
+                  bottom: 5px;
+                  font: normal 14px Arial;
+                }
+              }
+
+              .item-types{
+                margin: 33px 28px 0;
+                text-align: center;
+
+                .item-type{
+                  display: inline-block;
+                  text-align: center;
+                  padding: 5px;
+                  opacity: 0.5;
+                  cursor: pointer;
+                  margin-bottom: 5px;
+
+                  &:not(:last-child){
+                    margin-right: 30px;
+                  }
+
+                  &:hover, &.hovered{
+                    background: #f8f8f8;
+                    opacity: 1;
+                    @include border-radius(4px);
+                    @include box-shadow(0 2px 3px gray);
+                  }
+
+                  >DIV{
+                    display: inline-block;
+                    vertical-align: middle;
+                  }
+
+                  .box{
+                    width:12px;
+                    height: 12px;
+                    background: #2f7790;
+                    @include box-shadow(0 2px 1px gray);
+                  }
+
+                  .name{
+                    font: bold 11px Arial;
+                    color: #3d3d3d;
+                  }
+                }
               }
 
               .grading-chart-part{
@@ -51,10 +137,6 @@ BODY {
                   background-size: 100% 100%;
                   top: 18px;
                   left: 4px;
-
-                  &:hover{
-                    top: 18px;
-                  }
                 }
 
                 .chart-container{
