--- a/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
+++ b/Chalkable.Web/assets/jade/activities/teacher/StudentsList.jade
@@ -9,11 +9,14 @@
         .container.panel-bg
             .right
                 +ActionLink('students', 'my')(class=self.isMy() ? "pressed" : "")
-                    =Msg.My_Students
+                    =self.getUserRole().isStudent() ? Msg.Classmates :Msg.My_Students
                 +ActionLink('students', 'all')(class=self.isMy() ? "" : "pressed")
-                    =Msg.Whole_School
+                    =self.getUserRole().isStudent() ? Msg.My_Teachers :Msg.Whole_School
     +ActionForm('students', 'updateList')#people-list-form
-        input(type="hidden", name="my", value=self.isMy()))
+        input(type="hidden", name="my", value=(self.isMy() ? 'true' : 'false')))
         input(type="hidden", name="classId", value=self.getTopData().getSelectedItemId()))
         .users-list-container
-            +RenderWith(self.getUsersList(), chlk.templates.people.UsersList)
+            +RenderWith(self.getUsersList(), chlk.templates.people.UsersList)(
+                my = self.isMy(),
+                userRole = self.getUserRole()
+            )
